refactored and fixed multiple bugs from the build process to application code.